k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellogo
  namespace: default
spec:
  rules:
    - host: pipeline.18.232.244.72.sslip.io
      http:
        paths:
          - backend:
              service:
                name: hellogo
                port:
                  number: 8080
            path: /
            pathType: Prefix
